# react-native-native

./: .gitignore  .gitmodules  404.html  CLAUDE.md  Cargo.toml  README.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._full.txt  __next._head.txt  __next._tree.txt  docs.html  index.html  llms-full.txt  package.json
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
api/: search
apps/demo/: .gitignore  App.android.js  App.ios.js  Cargo.toml  app.json  hello.cpp  metro.config.js  package.json
apps/demo/components/native/: ComposeCard.kt  GradientBox.mm  KotlinCounter.kt  async_utils.cpp  device_info.mm  kotlin_utils.kt  math_utils.cpp  rust_math.rs
apps/docs/: package.json
apps/docs/.github/workflows/: deploy.yml
apps/docs/content/docs/: index.mdx  meta.json  troubleshooting.mdx
apps/docs/content/docs/getting-started/: hello-world.mdx  installation.mdx  production.mdx
apps/docs/content/docs/guides/: cpp.mdx  kotlin.mdx  objc.mdx  rust.mdx  swift-android.mdx
apps/docs/docs/: package.json
apps/docs/docs/.source/: browser.ts  server.ts
apps/docs/docs/content/docs/: index.mdx  meta.json
apps/docs/docs/content/docs/guides/: cpp.mdx  objc.mdx  (+2 more)
apps/docs/docs/src/lib/: layout.shared.tsx  shared.ts
apps/docs/src/app/(home)/: page.tsx
apps/ferrum-host/: App.js  Cargo.toml  GpuTriangle.rs  HelloRust.rs  ReactNativeNativeUserCode.podspec  SwiftCounter.swift  app.json  async_demo.mm  device_info.mm  haptics.mm  package-lock.json  package.json  platform_info.swift
apps/ferrum-host/android/app/src/main/java/com/kbrandwijk/ferrumhost/: MainApplication.kt
apps/ferrum-host/modules/expo-ferrum/: expo-module.config.json  index.ts  package.json
apps/ferrum-host/modules/expo-ferrum/android/: build.gradle
apps/ferrum-host/modules/expo-ferrum/android/src/main/cpp/: CMakeLists.txt  FerrumBindings.cpp  FerrumJNIDispatch.cpp  FerrumJNIDispatch.h
apps/ferrum-host/modules/expo-ferrum/android/src/main/java/expo/modules/ferrum/: ExpoFerrumModule.kt  FerrumBindings.kt  FerrumMethodResolver.kt  FerrumModuleProvider.kt
apps/ferrum-host/modules/expo-ferrum/ios/: CODEGEN.md  ExpoFerrum.podspec  ExpoFerrumModule.swift  Ferrum.mm  Ferrum.podspec  FerrumABIHelpers.h  FerrumABIHelpers.mm  FerrumABIRegistry.h  FerrumABIRegistry.mm  FerrumBench.mm  FerrumFFIDispatch.h  FerrumFFIDispatch.mm  FerrumRuntimeFactory.h  FerrumRuntimeFactory.mm  FerrumRuntimeHook.mm  FerrumSwizzle.mm  ferrum-codegen-runner.js  ferrum-codegen.js
apps/ferrum-host/modules/expo-ferrum/scripts/: GenerateModuleFerrumABI.js  ferrum-codegen.js
apps/ferrum-host/modules/expo-ferrum/src/: ExpoFerrumModule.ts
apps/ferrum-host/plugins/: withFerrumFactory.js
apps/ferrum-host/src/specs/: NativeFerrumBench.ts
crates/ferrum-android/: .gitignore  Cargo.toml  Makefile  NOTES.md  build.rs
crates/ferrum-android-ndk/: Cargo.toml  build.rs
crates/ferrum-android-ndk/android/: settings.gradle.kts
crates/ferrum-android-ndk/android/app/: build.gradle.kts
crates/ferrum-android-ndk/android/app/src/main/: AndroidManifest.xml
crates/ferrum-android-ndk/android/app/src/main/assets/: bundle.js
crates/ferrum-android-ndk/src/: lib.rs
crates/ferrum-android/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
crates/ferrum-android/android/app/: build.gradle.kts
crates/ferrum-android/android/app/src/main/: AndroidManifest.xml
crates/ferrum-android/android/app/src/main/assets/: bundle.js
crates/ferrum-android/android/app/src/main/java/com/ferrum/app/: FerrumFrameCallback.kt  MainActivity.kt
crates/ferrum-android/src/: lib.rs
crates/ferrum-core/: Cargo.toml
crates/ferrum-core/src/: bootstrap.rs  bridge.rs  lib.rs
crates/ferrum-ios/: Cargo.toml  NOTES.md  build.rs  project.yml
crates/ferrum-ios/Sources/: stub.c
crates/ferrum-ios/ios/: Info.plist  entitlements.plist  launch.sh
crates/ferrum-ios/src/: app_delegate.rs  display_link.rs  lib.rs  runtime.rs
crates/hermes-abi-rs/: Cargo.toml
crates/hermes-abi-rs/src/: error.rs  ffi.rs  lib.rs  runtime.rs  value.rs
crates/nativ-core/: Cargo.toml
crates/nativ-core/src/: ffi.rs  lib.rs  objc.rs  props.rs
crates/nativ-macros/: Cargo.toml
crates/nativ-macros/src/: lib.rs
docs/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  hermes-abi-analysis.md  rcthost-dependency-audit.md  rfc-draft-rcthost-composable.md  troubleshooting.html
docs/getting-started/: hello-world.html  installation.html  production.html  production.txt
docs/getting-started/hello-world/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.$oc$slug.txt
docs/getting-started/installation/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/getting-started/production/: __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/guides/: cpp.html  kotlin.html  kotlin.txt  objc.html  rust.html  rust.txt
docs/guides/cpp/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/guides/kotlin/: __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/guides/objc/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/guides/rust/: __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt
docs/troubleshooting/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.txt
js/: test_bundle.js
llms.mdx/docs/: content.md
llms.mdx/docs/getting-started/hello-world/: content.md
llms.mdx/docs/getting-started/installation/: content.md
llms.mdx/docs/getting-started/production/: content.md
llms.mdx/docs/guides/cpp/: content.md
llms.mdx/docs/guides/kotlin/: content.md
llms.mdx/docs/guides/objc/: content.md
llms.mdx/docs/guides/rust/: content.md
llms.mdx/docs/troubleshooting/: content.md
plans/: project_ferrum.md  project_ferrum_plan.docx
scripts/: build-fabric.sh  build-hermes.sh
(+4 files in other folders)
