[workspace]
members = [
    "crates/nativ-core",
    "crates/nativ-macros",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# Default: strip = false (iOS needs symbols for crash symbolication;
# Android's strip = true is set via target-specific override below)
strip = false

[profile.release-android]
inherits = "release"
strip = true

[workspace.dependencies]
# Macro utilities
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"

# Local path overrides for development (doesn't affect published crates)
[patch.crates-io]
nativ-macros = { path = "crates/nativ-macros" }
nativ-core = { path = "crates/nativ-core" }
