[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
path = ".ferrum/lib.rs"

[workspace]

[dependencies]
rna-core = { path = "../../crates/rna-core" }

# iOS-only dependencies
# [target.'cfg(target_os = "ios")'.dependencies]

# Android-only dependencies
# [target.'cfg(target_os = "android")'.dependencies]
