[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
path = ".nativ/lib.rs"

[workspace]

[dependencies]
nativ-core = { path = "../../crates/nativ-core" }

# iOS-only dependencies
# [target.'cfg(target_os = "ios")'.dependencies]

# Android-only dependencies
# [target.'cfg(target_os = "android")'.dependencies]
