[package]
name = "ferrum-android-ndk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android NDK bootstrap for Project Ferrum — pure C APIs, no JNI"

[lib]
crate-type = ["cdylib"]

[dependencies]
ferrum-core = { path = "../ferrum-core" }
android-activity = { version = "0.6", features = ["native-activity"] }
log.workspace = true
android_logger = "0.14"
ndk = "0.9"
ndk-sys = "0.6"
