[package]
name = "ferrum-android"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Android bootstrap for Project Ferrum: native .so that embeds Hermes via ferrum-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
ferrum-core = { path = "../ferrum-core" }
jni = { version = "0.21", features = ["invocation"] }
android_logger = "0.14"
log.workspace = true
