[package]
name = "ferrum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared Hermes runtime initialization for Project Ferrum (Phase 0)"

[dependencies]
hermes-abi-rs.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
oslog = { version = "0.2", features = ["logger"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
