[package]
name = "ferrum-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "iOS bootstrap binary for Project Ferrum: Rust-owned process that embeds Hermes JS via ferrum-core, evaluates JS bundles on physical iOS devices"

# Produces a static library consumed by the Xcode project.
# iOS binaries cannot be plain `bin` targets — they must be staticlib linked
# into an app bundle. The Xcode project references this artifact.
[lib]
name = "ferrum_ios"
crate-type = ["staticlib"]

[dependencies]
# ferrum-core provides FerumRuntime, HermesRuntime, and built-in globals.
ferrum-core = { path = "../ferrum-core" }
log.workspace = true

# Objective-C runtime access from Rust.
# objc2 provides safe wrappers around the ObjC runtime message-send mechanism.
objc2 = "0.5"

# Foundation framework bindings (NSString, NSLog, NSDictionary, NSBundle, etc.)
objc2-foundation = { version = "0.2", features = [
    "NSString",
    "NSBundle",
    "NSDictionary",
    "NSArray",
    "NSError",
    "NSDate",
    "NSRunLoop",
] }

# UIKit bindings (UIApplication, UIWindow, UIViewController, UIScreen)
# Note: UIApplicationDelegate is not a feature flag in objc2-ui-kit 0.2.x;
# it is provided automatically with UIApplication.
objc2-ui-kit = { version = "0.2", features = [
    "UIApplication",
    "UIWindow",
    "UIViewController",
    "UIScreen",
    "UIView",
    "UIResponder",
    "UIColor",
    "UILabel",
] }

# QuartzCore for CADisplayLink
objc2-quartz-core = { version = "0.2", features = [
    "CADisplayLink",
    "CALayer",
] }

# Logging — routes log! macros to os_log visible in Console.app.
oslog = { version = "0.2", features = ["logger"] }

# Build profiles are defined at the workspace root (ferrum/Cargo.toml)
