[package]
name = "hermes-abi-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust bindings to the Hermes JS engine stable C ABI (hermes_abi.h)"

[dependencies]
libc.workspace = true
log.workspace = true
thiserror.workspace = true
# Used in ffi.rs macro expansion to generate HermesABIFoo / HermesABIFooOrError type pairs
paste.workspace = true

[build-dependencies]
# TODO(phase1): Use bindgen to auto-generate FFI from hermes_abi.h once the
# Hermes library artifacts are available. For Phase 0 we write the FFI by hand
# against the known stable ABI.

# TODO(platform-linking): Add platform-specific link directives in build.rs
# once Hermes prebuilt .a/.so artifacts are staged:
#   iOS:     libhermes.a  (aarch64-apple-ios, from React Native pod cache)
#   Android: libhermes.so (aarch64-linux-android, from React Native npm package)
